styles/GraphicView.css
#graphicViewDiv{
    overflow: scroll;
    height: fit-content;
    overflow-x: scroll;
    display: flex;
    flex-direction: column;
    width: 100%;
}
#graphicViewDiv > button{
    padding: 0.3em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border: none;
    background-color: slategray;
    color: white;
}


#graphicViewDiv > svg{
    position: absolute;
    width: match-parent;
    height: 100%;
    float: left;
    z-index: 0;
}
#mainDiv > div{
}

#mainDiv{
    overflow: scroll;
    position: relative;
    display: flex;
    flex-direction: row;
    flex: 1;
    z-index: 10;
    background-color: rgba(0, 255, 255, 0.201);
}

